Avoid use of deprecated newInstance method